[project]
name = ""
version = ""
description = ""
authors = [
    {name = "raylemon",email = "raylemon0424@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
tools = [
    "black>=23.9.1",
    "ruff>=0.0.291",
]

[tool.ruff]
select = ["E","F","I"]