[project]
name = ""
version = ""
description = ""
authors = [
    {name = "raylemon",email = "raylemon0424@gmail.com"},
]
dependencies = [
    "colorama>=0.4.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
tools = [
    "black>=23.9.1",
    "ruff>=0.0.291",
]

[tool.ruff]
select = ["E","F","I"]